<resources>
    <string name="res_name_string">string</string>
    <string name="res_name_drawable">drawable</string>
    <string name="res_name_layout">layout</string>
    <string name="title_activity_single">Single Test</string>
    <string name="title_activity_result">Test Result</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_cpurate">CPURate</string>
    <string name="application_name">SMMI TEST</string>
    <string name="action_test_result">Test Result</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="action_reset">Reset</string>
    <string name="action_about">About</string>
    <string name="btn_start">Start</string>
    <string name="btn_test_again">Test Again</string>
    <string name="text_testing">Now testing ...</string>
    <string name="item_test_all_main">Test All</string>
    <string name="item_test_single_main">Single Test</string>
    <string name="item_upload_main">Upload</string>
    <string name="item_help_main">Help</string>
    <string name="text_test_bluetooth">Bluetooth Test</string>
    <string name="text_test_wifi">WiFi Test</string>
    <string name="text_test_battery">Battery Test</string>
    <string name="text_test_ecompass">ECompass Test</string>
    <string name="text_test_modem">Modem Test</string>
    <string name="text_test_gsensor">GSonsor Test</string>
    <string name="text_test_keypad">Keypad Test</string>
    <string name="text_test_touch">Touch Test</string>
    <string name="text_test_multitouch">MultiTouch Test</string>
    <string name="text_test_vibrator">vibrator Test</string>
    <string name="text_test_receiver">Receiver Test</string>
    <string name="text_test_speaker">Speaker Test</string>
    <string name="text_test_broadmic">BroadMic Test</string>
    <string name="text_test_main_camera">Main Camera Capture Test</string>
    <string name="text_test_front_camera">Front Camera Capture Test</string>
    <string name="text_test_camera_flash">CameraFlash Test</string>
    <string name="text_test_display">Display Test</string>
    <string name="text_test_headset">Headset Test</string>
    <string name="text_test_headset_mic">Headset Mic Test</string>
    <string name="text_test_headset_key">Headset Key Test</string>
    <string name="text_test_sdcard">SDcard Test</string>
    <string name="text_test_simcard">SIMcard Test</string>
    <string name="pass_result_bluetooth">The Bluetooth Test is working well</string>
    <string name="pass_result_wifi">The Wifi Test is working well</string>
    <string name="failed_result_bluetooth">The Bluetooth Test is failed</string>
    <string name="failed_result_wifi">The Wifi Test is failed</string>
    <string name="title_test_bt">Bluetooth Test</string>
    <string name="title_test_wifi">Wifi Test</string>
    <string name="status_test_bt">Bluetooth Status: </string>
    <string name="status_test_wifi">Wifi Status: </string>
    <string name="address_test_bt">MAC Address:</string>
    <string name="devicelist_test_bt">Device List:</string>
    <string name="ssid_test_wifi">SSID List:</string>
    <string name="status_on_bt">"On"</string>
    <string name="status_off_bt">"Off"</string>
    <string name="status_scanning_bt">"Scanning..."</string>
    <string name="no_bt_device">"Scanning is finished, didn't find the Bluetooth device!"</string>
    <string name="unknown">"unknown"</string>
    <string name="title_result_test">Test Result</string>
    <string name="tv_passed_result">"Passed:"</string>
    <string name="tv_failed_result">"Failed:"</string>
    <string name="title_activity_wifi_test">WifiTestAct</string>
    <string name="title_activity_wifi_testing">WifiTesting</string>
    <string name="title_activity_test_all">TestAllActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="AskForHelp_RMA_NotNetwork">Not Network</string>
    <string name="AskForHelp_RMA_NotNetwork_Des">Please check your network settings.</string>
    <string name="AskForHelp_RMA_Send">Send</string>
    <string name="AudioMic_Test_AudioManager_ROUTE_notSpeakerphone">The AudioManager ROUTE is not Speakerphone!</string>
    <string name="AudioMic_Test_Headset_MIC_record_test">Headset MIC record test</string>
    <string name="AudioMic_Test_MIC1_record_test">MIC1 record test</string>
    <string name="AudioMic_Test_MIC2_record_test">MIC2 record test</string>
    <string name="AudioMic_Test_MIC_record_test">MIC record test</string>
    <string name="AudioMic_Test_recording">Recording …</string>
    <string name="AudioPlay_Test_AudioManager_ROUTE_notROUTEEARPIECE">The AudioManager ROUTE is not ROUTE_EARPIECE!</string>
    <string name="AudioPlay_Test_Headset_earphonetest">Headset earphone test</string>
    <string name="AudioPlay_Test_Receiver_playbacktest">Receiver playback test</string>
    <string name="AudioPlay_Test_assemble_carmount">Please assemble the CarMount!</string>
    <string name="AudioPlay_Test_carmount_speakertest">CarMount speaker test</string>
    <string name="AudioPlay_Test_playback_test">playback test</string>
    <string name="AudioPlay_Test_remove_headset">Please remove the HeadSet!</string>
    <string name="AudioPlay_Test_speaker_playback">Speaker playback test</string>
    <string name="Battery_Test_Percentage">Battery Percentage:</string>
    <string name="Battery_Test_Timeout">Battery Test Timeout</string>
    <string name="CMD_Test_Des">Finding the mouse …</string>
    <string name="CMD_Test_No_Mouse_Found">No OTG Mouse Found</string>
    <string name="CMD_Test_connect_OTGMouse">Please connect to OTG Mouse</string>
    <string name="CMD_Test_valueoutof_boundary">Value out of boundary!!</string>
    <string name="CameraFlash_Test_Des">Please check whether the camera flash light on or not and make a judge.</string>
    <string name="CameraFlash_Test_checkcameraflash">Please Check camera flash is OK?</string>
    <string name="CapSensor_Test_ObjectAway">Let Object Away!</string>
    <string name="CapSensor_Test_ObjectNear">Let Object Near!</string>
    <string name="Charger_Test_AC_Charging">AC Charging</string>
    <string name="Charger_Test_Battery_Full">Battery Full</string>
    <string name="Charger_Test_CarMount_Charging">CarMount Charging</string>
    <string name="Charger_Test_Charging">Charging</string>
    <string name="Charger_Test_Des">If not charging , please tap fail.</string>
    <string name="Charger_Test_NotCharging">Not Charging</string>
    <string name="Charger_Test_Not_Charging">Not Charging</string>
    <string name="Charger_Test_Not_Charging_plugin">"Not Charging
Please plug in charger"</string>
    <string name="Charger_Test_USB_Charging">USB Charging</string>
    <string name="Charger_Test_Voltage">Voltage =</string>
    <string name="Charger_Test_Wireless_Charging">Wireless Charging</string>
    <string name="Charger_Test_noCarMount_detected">No CarMount detected!</string>
    <string name="Charger_Test_noplugType_detected">No plugType detected!</string>
    <string name="Charger_Test_remove_CarMount">Please remove the CarMount!</string>
    <string name="Charger_Test_remove_Charger">Please remove AC/USB charger</string>
    <string name="Charger_Test_remove_Charger_Des">Please remove the AC/USB charger and continue to do the test.</string>
    <string name="Charger_Test_remove_USBcable">Please remove the USB cable!</string>
    <string name="Display_Test_clickscreen">Please click the screen!</string>
    <string name="FAILDialog_BT_Test">Something wrong with Bluetooth Test!</string>
    <string name="FAILDialog_Battery_Test">Something wrong with Battery Test!</string>
    <string name="FAILDialog_BoardMic2_Test">Something wrong with BoardMic2 Test!</string>
    <string name="FAILDialog_BoardMic_Test">Something wrong with BoardMic Test!</string>
    <string name="FAILDialog_CMD_Mouse_Test">Something wrong with Mouse Test!</string>
    <string name="FAILDialog_CameraFlash_Test">Something wrong with CameraFlash Test!</string>
    <string name="FAILDialog_Display_Test">Something wrong with Display Test!</string>
    <string name="FAILDialog_ECompass_Test">Something wrong with ECompass Test!</string>
    <string name="FAILDialog_GSensor_Test">Something wrong with GSensor Test!</string>
    <string name="FAILDialog_Gyroscope_Test">Something wrong with Gyroscope Test!</string>
    <string name="FAILDialog_HDMI_Test">Something wrong with HDMI Test!</string>
    <string name="FAILDialog_HeadsetKey_Test">Something wrong with Headset Key Test!</string>
    <string name="FAILDialog_HeadsetMic_Test">Something wrong with Headset Mic Test!</string>
    <string name="FAILDialog_Headset_Test">Something wrong with Headset Test!</string>
    <string name="FAILDialog_Keypad_Test">Something wrong with Keypad Test!</string>
    <string name="FAILDialog_LightSensor_Test">Something wrong with Light Sensor Test!</string>
    <string name="FAILDialog_MainCamCapture_Test">Something wrong with Main Camera Capture Test!</string>
    <string name="FAILDialog_ModemBus_Test">Something wrong with Modem Test!</string>
    <string name="FAILDialog_MultiTouch_Test">Something wrong with MultiTouch Test!</string>
    <string name="FAILDialog_NFC_TagReader_Test">Something wrong with NFC Tag Reader Test!</string>
    <string name="FAILDialog_OTG_Mouse_Test">Something wrong with Mouse Test!</string>
    <string name="FAILDialog_Proximity_Test">Something wrong with Proximity Test!</string>
    <string name="FAILDialog_Receiver1_Test">Something wrong with Receiver Test!</string>
    <string name="FAILDialog_Receiver2_Test">Something wrong with Receiver Test!</string>
    <string name="FAILDialog_SDcard_Test">Something wrong with SDcard Test!</string>
    <string name="FAILDialog_SIMcard_Test">Something wrong with SIMcard Test!</string>
    <string name="FAILDialog_SIMcard_Test2">Something wrong with SIMcard Test!</string>
    <string name="FAILDialog_Speaker_Test">Something wrong with Speaker Test!</string>
    <string name="FAILDialog_Touch_Test">Something wrong with Touch Test!</string>
    <string name="FAILDialog_VGACamCapture_Test">Something wrong with Front Camera Capture Test!</string>
    <string name="FAILDialog_Vibrator_Test">Something wrong with Vibrator Test!</string>
    <string name="FAILDialog_WiFiBus_Test">Something wrong with WiFi Test!</string>
    <string name="FAILDialog_Wireless_Charger_Test">Something wrong with Wireless Charger Test!</string>
    <string name="FM_Test_Finish">Finish</string>
    <string name="FM_Test_Start">Start</string>
    <string name="FM_Test_plugin_earphone">Please plug in the earphone</string>
    <string name="HDMI_Test_HDMItest_success">HDMI_Test success?</string>
    <string name="HDMI_Test_NoHDMIDeviceFound">No HDMI device found</string>
    <string name="HDMI_Test_NoHDMIDeviceFound_Des">Please connect to a HDMI device, and continue to test it.</string>
    <string name="HDMI_Test_No_Res_Found">No HDMI Video Found.</string>
    <string name="HDMI_Test_connect_DUTtoHDMI_device">Please connect DUT to HDMI device</string>
    <string name="HDMI_Test_insert_MicroSDwithHDMI">Please insert MicroSD card with hdmi.mp4</string>
    <string name="HallSensor_Test_Backcover_detected">Backcover detected</string>
    <string name="HeadsetKey_Test_Headset_Key">Headset Key</string>
    <string name="HeadsetKey_Test_PressKey_Des">Please press headset key.</string>
    <string name="Keypad_Test_VolumeUP_Des">Please press Volume UP button.</string>
    <string name="Test_FAIL">FAIL</string>
    <string name="Vibrator_Test_Vibrator">Vibrator</string>
    <string name="layout_fail">Fail</string>
    <string name="layout_pass">Pass</string>
    <string name="layout_volume_down">Volume Down</string>
    <string name="layout_volume_up">Volume Up</string>
    <string name="CPU_usage">CPU Usage</string>
    <string name="Battery_level">Battery Level</string>
    <string name="memory_usage_rate">Memory Usage Rate</string>
</resources>