<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_testResult"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_test_result" />
    <item
        android:id="@+id/action_clearCache"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_cache" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_reset" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about" />
</menu>
