<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="50dp"
        android:text="@string/CameraFlash_Test_checkcameraflash"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/ensure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        android:visibility="visible">

        <Button
            android:id="@+id/bt_fail"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:background="@color/black1"
            android:text="@string/layout_fail"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_pass"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@color/blue"
            android:text="@string/layout_pass"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>