<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.example.songmeiling.myapplication.view.RateView
        android:id="@+id/display"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/CPU_usage"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Battery_level"
            android:textColor="#ffffff" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/memory_usage_rate"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.example.songmeiling.myapplication.view.DataLineView
            android:id="@+id/DateLine"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <GridView
            android:id="@+id/gridView_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp" />
    </LinearLayout>
</LinearLayout>
