<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/HeadsetKey_Test_PressKey_Des"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/hint"
        android:layout_marginTop="12dp"
        android:background="@color/white" />
    <!--<View-->
    <!--android:id="@+id/line"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0.5dip"-->
    <!--android:layout_below="@id/hint"-->
    <!--android:layout_margin="20dp"-->
    <!--android:background="#686868" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pass_up"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/div"
            android:layout_marginTop="30dp"
            android:background="@drawable/asus_diagnostic_ic_pass2"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/key_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/div"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/pass_up"
            android:text="@string/HeadsetKey_Test_Headset_Key"
            android:textColor="#888888"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/failBtn"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/black1"
            android:text="@string/Test_FAIL"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>