<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_lv_result"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:src="@mipmap/asus_diagnostic_ic_boardmic_test" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/icon_lv_result"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_lv_result"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tv_lv_result"
                android:text="@string/text_test_broadmic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_passed_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/icon_lv_result"
                    android:text="@string/tv_passed_result"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_failed_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/icon_lv_result"
                    android:text="@string/tv_failed_result"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/res_lv_result"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/asus_diagnostic_ic_fail2" />
    </RelativeLayout>

</RelativeLayout>
